<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".SignUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="70dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:hint="@string/phone_number"
            android:textColorHint="@android:color/black"
            android:layout_height="wrap_content"
            android:text="0988123399"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"
            />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:hint="@string/hint_name"
            android:textColorHint="@android:color/black"
            android:layout_height="wrap_content"
            android:text="Tom Cruise"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:inputType="textPersonName"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/black"
            android:layout_height="wrap_content"
            android:text="1234"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"
            />


    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:background="?android:attr/colorAccent"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:layout_margin="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        />


</RelativeLayout>