<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/login_logo4" />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:typeface="sans" />


    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    >

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/btnSignUp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:background="?android:attr/colorAccent"
        android:shadowColor="@android:color/black"
        android:layout_margin="8dp"
        android:textSize="20sp"

        android:typeface="serif"


        />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="?android:attr/colorAccent"
        android:shadowColor="@android:color/black"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="20sp"


        android:typeface="serif">

    </Button>


</LinearLayout>


</RelativeLayout>